# remmina-plugin-ultravnc

./: .travis.yml  CMakeLists.txt  README.md
remmina-plugin-ultravnc/: CMakeLists.txt
remmina-plugin-ultravnc/src/: plugin_config.h  remmina_plugin.c
